--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="materialize/css/materialize.min.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Admin: Clinica-Dental</title>
@@ -14,39 +13,49 @@
 <body>
     <nav class="navbar">
         <div class="brandName">
-            <img class="logo-dental" src="./images/logoDental.jpg" id="img-logo" alt="logo-dental">
+            <img class="logo-dental" src="./images/logodrvanessa.png" id="img-logo" alt="logo-dental">
             <div class="usuario"><span id="usuario"></span><span id="myWidth"></span></div>
         </div>
         <div class="navLinks">
             <ul>
                 <li>
-                    <a href="#" class="modal-trigger menu" data-target="modal-crud" id="link-paciente">
-                        <i class="material-icons left">airline_seat_recline_extra</i>
-                        <span>Pacientes</span>
+                    <a href="#" class="menu" id="link-paciente">
+                        <div class="div-navlinks">
+                            <img class="img-menu" src="images/paciente-icon.png" alt="">
+                            <span>Pacientes</span>
+                        </div>
                     </a>
                 </li>
                 <li>
                     <a href="#agenda" class="menu" id="link-agenda">
-                        <i class="material-icons left">history_toggle_off</i>
-                        <span>Agenda</span>
+                        <div class="div-navlinks">
+                            <img class="img-menu" src="images/agenda-icon.png" alt="">
+                            <span>Agenda</span>
+                        </div>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="menu" id="link-dashboard">
-                        <i class="material-icons left">grid_view</i>
-                        <span>Dashboard</span>
+                        <div class="div-navlinks">
+                            <img class="img-menu" src="images/dashboard-icon.png" alt="">
+                            <span>Dashboard</span>
+                        </div>
                     </a>
                 </li>
                 <li>
                     <a href="#" id="loginId" class="modal-trigger" data-target="modal-login">
-                        <i class="material-icons left">lock</i>
-                        <span>Entrar</span>
+                        <div class="div-navlinks">
+                            <img class="img-menu" src="images/lock-icon.png" alt="">
+                            <span id="entrar">Entrar</span>
+                        </div>
                     </a>
                 </li>
                 <li>
                     <a href="#" id="logout">
-                        <i class="material-icons left">open_in_new</i>
-                        <span>Salir</span>
+                        <div class="div-navlinks">
+                            <img class="img-menu" src="images/salir-icon.png" alt="">
+                            <span>Salir</span>
+                        </div>
                     </a>
                 </li>
             </ul>
@@ -60,7 +69,35 @@
     </nav>
     <section id="inicio"></section>
 
-    <section id="pacientes"></section>
+    <section id="pacientes">
+
+        <div class="div-tabla">
+            <div id="div-pacientes-titulo">
+                <h3>Pacientes Registrados</h3>
+                <a href="crearpaciente.html ">
+                    <img id="img-crear-paciente" src="images/crear-paciente-icon.png" alt="icon" >
+                </a>
+            </div>
+            <table id="tabla-paciente" class="striped highlight">
+                <thead>
+                    <tr>
+                        <th id="th-id-hidden">id</th>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Cedula</th>
+                        <th>accion</th>
+                    </tr>
+                </thead>
+                <tbody id="pacientes-tbody">
+                </tbody>
+            </table>
+        </div>
+    </section>
+
+    <section id="section-crear-paciente"></section>
+
+
+
 
     <section class="timeline" id="myTimeline">
         <div class="intro" id="myIntro">
