--- a/crearpaciente.html
+++ b/crearpaciente.html
@@ -252,6 +252,14 @@
           required></textarea>
       </div>
       <br />
+
+      <div id="div-odontograma">
+        <a href="odograma.html">
+          <h5>Ver Odontograma</h5>
+        </a>
+        <a href="odograma.html"><img src="images/odontograma-icon.png" alt="icon"></a>
+      </div>
+      <br>
       <div class="btn-block">
         <button type="submit" href="/">Registrar Informacion</button>
       </div>
