--- a/odograma.html
+++ b/odograma.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Examen Clinico Intraoral - Odontograma</h1>
+  <h2 id="h2-nombre">Examen Clinico Intraoral - Odontograma</h2>
   <div id="sidebar">
     <div class="colorButtons">
       <div>
