--- a/odograma.html
+++ b/odograma.html
@@ -6,12 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/odograma.css">
+  <script defer src="js/all.js"></script>
   <title>Odontograma</title>
 </head>
 
 <body>
   <h2 id="h2-nombre">Examen Clinico Intraoral - Odontograma</h2>
+
   <div id="sidebar">
+
     <div class="colorButtons">
       <div>
         <button id="btncolor-blanco" class="btn-color"></button>
@@ -32,46 +35,64 @@
     <hr>
     <h3>SIMBOLOS</h3>
     <div id="div-figuras">
-      <button id="marcador" class="btn comando"><img src="images/marker-icon.png" alt=""></button>
-      <button id="caries" class="btn comando"><img src="images/caries.png" alt=""></button>
-      <button id="extraccion" class="btn comando"><img src="images/extracion.png" alt=""></button>
-      <button id="ausente" class="btn comando"><img src="images/ausente.png" alt=""></button>
-      <button id="puenteFijo" class="btn comando"><img src="images/puentefijo.png" alt=""></button>
-      <button id="lineaV" class="btn comando"><img src="images/paralelasV.png" alt=""></button>
-      <button id="lineaH" class="btn comando"><img src="images/paralelasH.png" alt=""></button>
-      <button id="implante" class="btn comando"><img src="images/implante.png" alt=""></button>
-      <button id="removible" class="btn comando"><img src="images/removible.png" alt=""></button>
-      <button id="hipersense" class="btn comando"><img src="images/hipersense.png" alt=""></button>
-      <button id="apical" class="btn comando"><img src="images/apical.png" alt=""></button>
-      <button id="fistula" class="btn comando"><img src="images/fistula.png" alt=""></button>
-      <button id="empaq-alimento" class="btn comando"><img src="images/empaq-alimentos.png" alt=""></button>
-      <button id="infraoclusion" class="btn comando"><img src="images/infraoclusion.png" alt=""></button>
-      <button id="extrusion" class="btn comando"><img src="images/extrusion.png" alt=""></button>
-      <button id="inclinacion" class="btn comando"><img src="images/inclinacion.png" alt=""></button>
-      <button id="rotacion" class="btn comando"><img src="images/rotacion.png" alt=""></button>
+      <button id="marcador" class="td-btn" data-tip="Marcador"><img src="images/marker-icon.png" alt=""></button>
+      <button id="caries" class="td-btn" data-tip="Caries"><img src="images/caries.png" alt=""></button>
+      <button id="extraccion" class="td-btn" data-tip="Extraccion"><img src="images/extracion.png" alt=""></button>
+      <button id="ausente" class="td-btn" data-tip="Diente Ausente"><img src="images/ausente.png" alt=""></button>
+      <button id="puenteFijo" class="td-btn" data-tip="Puente Fijo"><img src="images/puentefijo.png" alt=""></button>
+      <button id="lineaV" class="td-btn" data-tip="Diastema"><img src="images/paralelasV.png" alt=""></button>
+      <button id="lineaH" class="td-btn" data-tip="Por Definir"><img src="images/paralelasH.png" alt=""></button>
+      <button id="implante" class="td-btn" data-tip="Implante"><img src="images/implante.png" alt=""></button>
+      <button id="removible" class="td-btn" data-tip="Removible"><img src="images/removible.png" alt=""></button>
+      <button id="hipersense" class="td-btn" data-tip="Hipersensibilidad"><img src="images/hipersense.png"
+          alt=""></button>
+      <button id="apical" class="td-btn" data-tip="Proceso Apical"><img src="images/apical.png" alt=""></button>
+      <button id="fistula" class="td-btn" data-tip="Fistula"><img src="images/fistula.png" alt=""></button>
+      <button id="extrusion" class="td-btn" data-tip="Extrusion"><img src="images/extrusion.png" alt=""></button>
+      <button id="infraoclusion" class="td-btn" data-tip="Infraoclusion"><img src="images/infraoclusion.png"
+          alt=""></button>
+      <button id="inclinacion" class="td-btn" data-tip="Inclinacion"><img src="images/inclinacion.png" alt=""></button>
+      <button id="rotacion" class="td-btn" data-tip="Rotacion"><img src="images/rotacion.png" alt=""></button>
+      <button id="empaq-alimento" class="td-btn" data-tip="Empaquetamiento de Alimentos"><img
+          src="images/empaq-alimentos.png" alt=""></button>
+      <button id="profundidad-sondaje" class="td-btn" data-tip="Profundidad de Sondaje">PS</button>
+      <button id="frenillo" class="td-btn" data-tip="Frenillo">Y</button>
+      <button id="nivel-insersion" class="td-btn" data-tip="Nivel de Insersion Clinica">NIC</button>
+      <button id="sangramiento-sondaje" class="td-btn" data-tip="Sangramiento al Sondaje">SS.</button>
+      <button id="mucosa-masticadora" class="td-btn" data-tip="Mucosa Masticadora">MM</button>
+      <button id="defecto-mucogingival" class="td-btn" data-tip="Defecto Mucogingival">DMG</button>
+      <button id="movilidad-dentaria" class="td-btn" data-tip="Movilidad Dentaria">MOV</button>
+      <button id="protesis-defectuosa" class="td-btn" data-tip="Protesis Defectuosa">PD</button>
+      <button id="compromiso-furcacion" class="td-btn" data-tip="Compromiso Furcacion">CF</button>
+      <button id="clear" class="td-btn" data-tip="Borrar Todo"><img src="images/broom-icon.png" alt=""></button>
+      <button id="simbolox17" class="td-btn" data-tip="Por Definir"><img src="images/tools-icon.png" alt=""></button>
 
+      <button id="eraser" class="td-btn" data-tip="Por Definir"><img src="images/tools-icon.png" alt=""></button>
 
-      <button id="profundidad-sondaje" class="btn comando">PS</button>
-      <button id="nivel-insersion" class="btn comando">NIC</button>
-      <button id="sangramiento-sondaje" class="btn comando">SS.</button>
-      <button id="mucosa-masticadora" class="btn comando">MM</button>
-      <button id="defecto-mucogingival" class="btn comando">DMG</button>
-      <button id="movilidad-dentaria" class="btn comando">MOV</button>
-      <button id="compromiso-furcacion" class="btn comando">CF</button>
-      <button id="protesis-defectuosa" class="btn comando">PD</button>
-      <button id="frenillo" class="btn comando">Y</button>
-      <button id="eraser" class="btn comando"><img src="images/eraser-icon.png" alt=""></button>
-      <button id="clear" class="btn comando"><img src="images/broom-icon.png" alt=""></button>
-      <button id="simbolox16" class="btn comando"><img src="images/tools-icon.png" alt=""></button>
-      <button id="simbolox17" class="btn comando"><img src="images/tools-icon.png" alt=""></button>
+      <button id="download" class="td-btn" data-tip="Descargar"><img src="images/download-icon.png" alt=""></button>
+
     </div>
     <hr>
     <div class="guardar">
-      <a id="saveToImage">Guardar Odograma</a>
+      <a id="saveToImage">Guardar</a>
+     
     </div>
+    <span id="progress"></span>
     <span id="myH3"></span>
+
   </div>
 
+
+
+
+  <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
+  <!---   
+    <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-functions.js"></script>
+    -->
+  <script src="js/firebase-config.js"></script>
   <script src="js/odograma.js"></script>
 </body>
 
