--- a/crearpaciente.html
+++ b/crearpaciente.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+  <span id="span-pestana">Nuevo</span>
+  <button class="volver"><a href="index.html">volver</a> </button>
   <div class="testbox">
 
     <form id="historia-form" autocomplete="off">
@@ -21,12 +23,13 @@
       </div>
       <br>
 
+
       <div class="div-h5">
         <h5>Datos Personales</h5>
       </div>
       <div class="item tipoInput">
         <p>Nombre</p>
-        <input type="text" name="nombre" id="nombre" required />
+        <input type="text" name="nombre" id="nombre" autocapitalize="senteces" required />
         <p>Apellido</p>
         <input type="text" name="apellido" id="apellido" required />
       </div>
@@ -77,7 +80,7 @@
         </div>
       </div>
 
-      <div class="item">
+      <div class="item dir">
         <p>Direcci&oacuten de habitaci&oacuten</p>
         <input type="text" id="direccion1" value="" />
         <p>Contacto Personal</p>
@@ -115,7 +118,7 @@
           <label for="checktomamedicamento1" class="radio"><span>Si</span></label>
           <input type="radio" id="checktomamedicamento2" name="checktomamedicamento" value="false" />
           <label for="checktomamedicamento2" class="radio"><span>No</span></label>
-          <input type="radio" id="checktomamedicamento3" name="checktomamedicamento" value=""  checked/>
+          <input type="radio" id="checktomamedicamento3" name="checktomamedicamento" value="" checked />
         </div>
       </div>
       <div class="item">
@@ -268,7 +271,7 @@
           <label for="checkcomplicaciones1" class="radio"><span>Si</span></label>
           <input type="radio" id="checkcomplicaciones2" name="checkcomplicaciones" value="false" />
           <label for="checkcomplicaciones2" class="radio"><span>No</span></label>
-          <input type="radio" id="checkcomplicaciones3" name="checkcomplicaciones" value=""  checked/>
+          <input type="radio" id="checkcomplicaciones3" name="checkcomplicaciones" value="" checked />
         </div>
       </div>
       <div class="item">
@@ -287,10 +290,10 @@
       <div id="div-control-asistencia">
         <h5>Control de Asistencia (1ra. consulta)</h5>
         <div class="item">
-          <p>Fecha de esta Cita</p>
+          <p id="fecha-cita">Fecha de esta Cita</p>
           <input type="date" id="fechacontrolasistencia" name="fechaultimaconsulta" value="" />
         </div>
-        <p>Procedimientos Realizados</p>
+        <p id="procedimiento">Procedimientos Realizados</p>
         <div class="item textarea">
           <textarea rows="6" placeholder="detalle los procedimientos aplicados en esta cita" id="textcontrolasistencia"
             name="textcontrolasistencia"></textarea>
@@ -313,7 +316,7 @@
       </div>
       <br />
 
-      <div id="div-odontograma">
+      <div id="div-odontograma-nuevo">
         <a href="odograma.html">
           <h5>ODONTOGRAMA</h5>
         </a>
@@ -329,6 +332,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
   <script src="js/firebase-config.js"></script>
   <script src="js/crear-paciente.js"></script>
 
