--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="materialize/css/materialize.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Admin: Clinica-Dental</title>
+    <script defer src="js/all.js"></script>
+    <title>Dra. Vanessa Mijares</title>
 </head>
 
 <body>
+    <!--- version 30-junio-2021  -->
     <nav class="navbar">
         <div class="brandName">
             <img class="logo-dental" src="./images/logoDental.jpg" id="img-logo" alt="logo">
@@ -73,23 +75,35 @@
 
         <div class="div-tabla">
             <div id="div-pacientes-titulo">
-               
-                <a href="crearpaciente.html ">
-                    <img id="img-crear-paciente" src="images/crear-paciente-icon.png" alt="icon" >                  
-                </a>
+                <span class="tooltip" data-text="Crear Nueva Historia">
+                    <a href="crearpaciente.html ">
+                        <img id="img-crear-paciente" src="images/crear-paciente-icon.png" alt="icon">
+                    </a>
+                </span>
                 <p class="bottom10">Paciente Nuevo</p>
-                <h3>Pacientes Registrados</h3>
+
+
+                <div id="div-buscador">
+                    <h3>Pacientes Registrados</h3>
+                    <div class="search__div">
+                        <input class="search__input" type="text" name="" placeholder="Buscar">
+                        <span class="icono"><i class="fas fa-search"></i></span>
+                    </div>
+                    <button id="btn-borrar">X</button>
+                </div>
+
+
+
             </div>
             <table id="tabla-paciente" class="striped highlight">
                 <thead>
                     <tr>
-                        <th id="th-id-hidden">id</th>                        
+                        <th id="th-id-hidden">id</th>
                         <th>Nombre</th>
                         <th>Apellido</th>
                         <th>Edad</th>
-                        <th>Ced&uacutela</th>
                         <th>Tel&eacutefono</th>
-                        <th>Men&uacute</th>
+                        <th>Opciones</th>
                     </tr>
                 </thead>
                 <tbody id="pacientes-tbody">
@@ -98,7 +112,7 @@
         </div>
     </section>
 
-   
+
 
     <section id="section-crear-paciente"></section>
 
@@ -125,6 +139,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
     <!---   
     <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-functions.js"></script>
     -->
@@ -133,7 +148,7 @@
     <script defer src="js/material-config.js"></script>
     <script defer src="js/auth.js"></script>
     <script defer src="js/index.js"></script>
-    <script src="js/timeline.js"></script>
+    <!-- <script src="js/timeline.js"></script>   -->
 </body>
 
 </html>
