--- a/crearpaciente.html
+++ b/crearpaciente.html
@@ -43,7 +43,7 @@
         <p>Celular&nbsp&nbsp</p>
         <input type="text" id="celular" value="" />
         <p>Tel&eacutefono_Local</p>
-        <input type="text" id="tlflocal" value="" />
+        <input type="tel" id="tlflocal" value="" />
       </div>
       <div class="item tipoInput">
         <p>Email&nbsp&nbsp&nbsp&nbsp</p>
@@ -287,6 +287,8 @@
           name="texttratamiento"></textarea>
       </div>
       <br />
+
+      
       <div id="div-control-asistencia">
         <h5>Control de Asistencia (1ra. consulta)</h5>
         <div class="item">
@@ -298,31 +300,50 @@
           <textarea rows="6" placeholder="detalle los procedimientos aplicados en esta cita" id="textcontrolasistencia"
             name="textcontrolasistencia"></textarea>
         </div>
+        <h5>Informacion del Pago</h5>
         <div class="item" id="div-ref-monto">
-          <select id="formadepago">
-            <option value="" disabled selected>Forma de Pago</option>
-            <option value="Efectivo">Efectivo$</option>
-            <option value="Transferencia">Transferencia</option>
-            <option value="Pago-Movil">Pago-Movil</option>
-            <option value="Zelle">Zelle</option>
-            <option value="Otro">Otro</option>
-          </select>
 
-          <p>Referencia</p>
-          <input type="text" id="referenciapago" name="referenciapago" value="" />
-          <p>Monto</p>
-          <input type="text" id="montopagado" name="montopagado" value="" />
+          <div id="div-selects">
+            <select id="formadepago">
+              <option value="" disabled selected>Forma de Pago</option>
+              <option value="Efectivo">Efectivo$</option>
+              <option value="Transferencia">Transferencia</option>
+              <option value="Pago-Movil">Pago-Movil</option>
+              <option value="Zelle">Zelle</option>
+              <option value="Otro">Otro</option>
+            </select>
+
+            <select id="select-banco">
+              <option value="" disabled selected>Banco</option>
+              <option value="Banesco">Banesco Banco Universal</option>
+              <option value="Venezuela">Banco de Venezuela</option>
+              <option value="Mercantil">Banco Mercantil</option>
+              <option value="BNC">BNC Nacional de Credito</option>
+              <option value="Tesoro">Banco del Tesoro</option>
+              <option value="BVC">Banco Vzlno. d/Credito</option>
+              <option value="BOD">BANCO BOD</option>
+              <option value="Otro">Otro</option>
+            </select>
+            <select id="tipo-pago">
+              <option value="" disabled selected>Tipo de Pago</option>
+              <option value="Total-Consulta">Pago Total de Consulta</option>
+              <option value="Abono a Cuenta">Pago Abono a Cuenta</option>
+              <option value="Saldo Pendiente">Pago Saldo Pendiente</option>
+            </select>
+          </div>
+          <div id="div-inputs-pago">
+            <p>Referencia:</p>
+            <input type="text" id="referenciapago" name="referenciapago" value="" />
+            <p>Monto Bs. :</p>
+            <input type="number" step="0.1" id="montopagadobs" name="montopagadobs" value="" />
+            <p>Monto US$:</p>
+            <input type="number" step="0.1" id="montopagado" name="montopagado" value="" />
+          </div>
         </div>
       </div>
       <br />
 
-      <div id="div-odontograma-nuevo">
-        <a href="odograma.html">
-          <h5>ODONTOGRAMA</h5>
-        </a>
-        <a href="odograma.html"><img src="images/odontograma-icon.png" alt="icon"></a>
-      </div>
-      <br>
+
       <div class="btn-block">
         <button type="submit" id="btn-registrar-paciente"" href=" /">Registrar Nuevo Paciente</button>
       </div>
